--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ backdrop-filter: hue-rotate(20deg);
     margin:0px;
     position: absolute;
     z-index: 2;
- opacity: .9;
+ opacity: 1;
 
 
   }
@@ -56,7 +56,7 @@ backdrop-filter: hue-rotate(20deg);
     margin:0px;
     position: absolute;
     z-index: 2;
- opacity: .9; 
+ opacity: 1; 
  backdrop-filter: contrast(40%);
 backdrop-filter: drop-shadow(4px 4px 10px blue);
 backdrop-filter: grayscale(30%);
@@ -70,7 +70,7 @@ backdrop-filter: hue-rotate(60deg);
     <script type="module">
 
 			import * as THREE from './j/three.module.js';
-      import{W as A,a as W,V as h,G as v,B as E,r as o,P as z,b as G,c as L,M as S,T as P,D as k,A as C}from"./j/math-utils-1c6b45c8.js";const H=document.querySelector(".app4"),t=new A({canvas:H,showFps:!0,orbitControls:!0});window.webgl=t;const x=new W;x.setSize(window.innerWidth,window.innerHeight);x.domElement.id = 'app1';document.body.appendChild(x.domElement);const s=document.createElement("video");s.src="./assets/Cube.webm";s.muted=!0;s.loop=!0;s.play();const N=new h(s),c=new v,U=30;for(let i=0;i<U;i++){const w=new E(o(.6,.5),o(4.9,-4.9),o(10.00,-10.7)),e=1,u=window.innerWidth/e*window.devicePixelRatio,f=window.innerHeight/e*window.devicePixelRatio;let M;for(let a=0;a<e;a++)for(let m=0;m<e;m++){const n=new z(u*2/f*2);n.viewport=new G(Math.floor(m*u),Math.floor(a*f),Math.ceil(u),Math.ceil(f)),n.position.x=2-m/e,n.position.y=0/(a/e),n.position.z=-.5+a/e,n.position.multiplyScalar(-3),n.lookAt(9,1,0),n.updateMatrixWorld()}M=t.camera,M.position.z=3;const b=new L({camera:t.camera,texture:N,color:"#040504",textureScale:3.0}),r=new S(w,b);r.position.x=o(-1,2),r.position.y=o(-1,1),r.position.z=o(-1,1),b.project(r),c.add(r)}let p;p=t.camera;p.position.z=90;const d=document.createElement("video");d.src="./wire.webm";d.muted=!0;d.loop=!0;d.play();const j=new h(d),g=new L({camera2:t.camera,texture2:j,color:"#1c1c1c",textureScale:0.8}),D=new v,I=223;for(let i=0;i<I;i++){const w=new E(o(.6,.5),o(.51,.5),o(.21,.5)),e=new S(w,g);p.position.set(36,1,42),p.lookAt(3,3,0),e.position.x=o(-2,2.7),e.position.y=o(-1.1,1),e.position.z=o(-1.9,1.5),g.project(e),D.add(e)}let y;y=t.camera;const l=document.createElement("video");l.src="./assets/";l.muted=!0;l.loop=!0;l.play();const R=new h(l);t.scene.add(c);new P;t.scene.background=R;t.scene.background.receiveShadow=!0;y.position.set(6,1,-2);y.lookAt(3,0,2);const T=new k("#ffffff",.8);T.position.set(0,5,9);t.scene.add(T);const V=new C("#fff",.79);t.scene.add(V);c.rotation.y=Math.PI/1;t.onUpdate(()=>{c.rotation.y-=20.8153});t.start();
+      import{W as A,a as W,V as h,G as v,B as E,r as o,P as z,b as G,c as L,M as S,T as P,D as k,A as C}from"./j/math-utils-1c6b45c8.js";const H=document.querySelector(".app4"),t=new A({canvas:H,showFps:!0,orbitControls:!0});window.webgl=t;const x=new W;x.setSize(window.innerWidth,window.innerHeight);x.domElement.id = 'app1';document.body.appendChild(x.domElement);const s=document.createElement("video");s.src="./assets/Cube.webm";s.muted=!0;s.loop=!0;s.play();const N=new h(s),c=new v,U=30;for(let i=0;i<U;i++){const w=new E(o(.6,.5),o(4.9,-4.9),o(10.00,-10.7)),e=1,u=window.innerWidth/e*window.devicePixelRatio,f=window.innerHeight/e*window.devicePixelRatio;let M;for(let a=0;a<e;a++)for(let m=0;m<e;m++){const n=new z(u*2/f*2);n.viewport=new G(Math.floor(m*u),Math.floor(a*f),Math.ceil(u),Math.ceil(f)),n.position.x=2-m/e,n.position.y=0/(a/e),n.position.z=-.5+a/e,n.position.multiplyScalar(3),n.lookAt(9,1,0),n.updateMatrixWorld()}M=t.camera,M.position.z=3;const b=new L({camera:t.camera,texture:N,color:"#040504",textureScale:3.0}),r=new S(w,b);r.position.x=o(-1,2),r.position.y=o(-1,1),r.position.z=o(-1,1),b.project(r),c.add(r)}let p;p=t.camera;p.position.z=90;const d=document.createElement("video");d.src="./wire.webm";d.muted=!0;d.loop=!0;d.play();const j=new h(d),g=new L({camera2:t.camera,texture2:j,color:"#1c1c1c",textureScale:0.8}),D=new v,I=223;for(let i=0;i<I;i++){const w=new E(o(.6,.5),o(.51,.5),o(.21,.5)),e=new S(w,g);p.position.set(36,1,42),p.lookAt(3,3,0),e.position.x=o(-2,2.7),e.position.y=o(-1.1,1),e.position.z=o(-1.9,1.5),g.project(e),D.add(e)}let y;y=t.camera;const l=document.createElement("video");l.src="./assets/";l.muted=!0;l.loop=!0;l.play();const R=new h(l);t.scene.add(c);new P;t.scene.background=R;t.scene.background.receiveShadow=!0;y.position.set(6,1,-2);y.lookAt(3,0,2);const T=new k("#ffffff",.8);T.position.set(0,5,9);t.scene.add(T);const V=new C("#fff",.79);t.scene.add(V);c.rotation.y=Math.PI/1;t.onUpdate(()=>{c.rotation.y-=20.8153});t.start();
 
 const camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
 
