--- a/ol.html
+++ b/ol.html
@@ -56,7 +56,7 @@ opacity:1;
 
 }
 #card_sd {
-  height:50%;
+  height:40%;
   
   background-color: rgb(255 255 255 / 7%);
   backdrop-filter: blur(10px);
@@ -66,7 +66,7 @@ backdrop-filter: opacity(50%);
   border-radius: 2px;
   border-width: 3px;
   border-color: aliceblue;
-
+width: 125px;
 }
   </style> 
 
