--- a/ol.html
+++ b/ol.html
@@ -66,8 +66,8 @@ backdrop-filter: opacity(50%);
   border-radius: 2px;
   border-width: 3px;
   border-color: aliceblue;
-width: 125px;
-}
+width: 145px;
+height: 145px;}
   </style> 
 
 </head>
