--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@ console.log('sound');
   
   </script>
 
-  <div class="main">
+  <div class="app4">
     
   </div>
  
 
-  <canvas class="app4" id="app1"></canvas>
+  <canvas  id="app1"></canvas>
  
   <iframe id="ol"  title="logo-overlay" frameborder="0"  src="./ol.html"> </iframe> </div>
 
