--- a/ol.html
+++ b/ol.html
@@ -67,7 +67,7 @@ backdrop-filter: opacity(50%);
   border-width: 3px;
   border-color: aliceblue;
 width: 125px;
-}
+  height: 125px;}
   </style> 
 
 </head>
