--- a/ol.html
+++ b/ol.html
@@ -27,7 +27,7 @@
 
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 200;
+  font-weight: 100;
   font-style: normal;
   margin-top:27%;
   margin-bottom: 2%;
@@ -36,7 +36,10 @@
   padding:5px;
  color:white;
   height:40%;
-  z-index:2;
+    
+  background-color: rgb(255 255 255 / 7%);
+  backdrop-filter: blur(10px);
+backdrop-filter: opacity(50%);  z-index:2;
 }
 .btn, .badge-warning {
   background-color: rgb(55, 103, 248);
@@ -55,13 +58,7 @@
 opacity:1;
 
 }
-#card_sd {
-  height:40%;
-  
-  background-color: rgb(255 255 255 / 7%);
-  backdrop-filter: blur(10px);
-backdrop-filter: opacity(50%);
-}
+
 .cover {
   border-radius: 2px;
   border-width: 3px;
