--- a/index.html
+++ b/index.html
@@ -108,13 +108,10 @@ console.log('sound');
 
   <canvas id="app1"></canvas>
  
-  <iframe id="ol"  title="logo-overlay" frameborder="0"  src="./ol.html"> </iframe> </div>
+  <iframe id="ol"  title="logo-overlay" frameborder="0"  src="./ol.html"> </iframe>
+  <iframe id="dancer"  title="dancer" frameborder="0"  src="./dancer.html"> </iframe> 
 
 
-
-
-</div>
-    
 
   </body>
 </html>
