--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@ console.log('sound');
   <div class="app4">
     
 
- 
-
+ <canvas id="cnv2"></canvas>
   <canvas id="app1"></canvas>
    </div>
 	  <iframe id="dancer"  title="dancer" frameborder="0"  src="./dancer.html"> </iframe> 
