--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+4<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,8 +14,8 @@
   }
 
   #dancer{
-    height:100vh;
-    width:100%;
+    height:150vh;
+    width:150%;
     margin:0px;
     position: absolute;
     z-index: 30;
