--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-4<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,8 +16,9 @@
   #dancer{
     height:150vh;
     width:150%;
-    margin:0px;
-    position: absolute;
+    margin-left:0;   
+	  margin-right:20;
+	  position: absolute;
     z-index: 30;
     backdrop-filter: contrast(40%);
 backdrop-filter: drop-shadow(4px 4px 10px blue);
