--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     height:150vh;
     width:150%;
     margin-left:0;   
-	  margin-right:20;
+	  margin-right:30;
+	    margin-bottom:30;	
+ margin-top:10;	
 	  position: absolute;
     z-index: 30;
     backdrop-filter: contrast(40%);
