--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ console.log('sound');
 
    </div>
 	  <iframe id="dancer"  title="dancer" frameborder="0"  src="./dancer.html"> </iframe> 
-
+  <iframe id="ol"  title="logo" frameborder="0"  src="./ol.html"> </iframe> 
 
 
   </body>
