--- a/ol.html
+++ b/ol.html
@@ -27,7 +27,8 @@
 
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 200;
+  font-weight: 100;
+  font-size: 40px; 
   font-style: normal;
   margin-top:27%;
   margin-bottom: 2%;
@@ -56,7 +57,7 @@ opacity:1;
 
 }
 #card_sd {
-  height:40%;
+  height:35%;
   
   background-color: rgb(255 255 255 / 7%);
   backdrop-filter: blur(10px);
@@ -64,9 +65,8 @@ backdrop-filter: opacity(50%);
 }
 .cover {
   border-radius: 2px;
-  border-width: 3px;
-  border-color: aliceblue;
-width: 145px;
+
+width: 155px;
 height: 145px;}
   </style> 
 
