--- a/dancer.html
+++ b/dancer.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +8,8 @@
     <title>haawke - the music box</title>
       <script type="module" crossorigin src="./j/assets/orth2.js"></script>  
   <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
+j
+  <script type="module" crossorigin src="./j/main-2f8b6886.js"></script>  
  <script type="module" crossorigin src="./j/multiple_video_works-c4d4c3e2.js"></script>  
     /head>
   <body>
