--- a/dancer.html
+++ b/dancer.html
@@ -5,13 +5,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>haawke - the music box</title>
-      <script type="module" crossorigin src="./j/assets/orth2.js"></script>  
+    <title>haawke</title>
+    <script type="module" crossorigin src="./j/assets/main-2f8b6886.js"></script>
+    <script type="module" crossorigin src="./j/assets/sq.js"></script>   
   <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
-j
-  <script type="module" crossorigin src="./j/main-2f8b6886.js"></script>  
- <script type="module" crossorigin src="./j/orth2.js"></script>  
-    /head>
+
+  </head>
   <body>
 
     
