--- a/dancer.html
+++ b/dancer.html
@@ -8,7 +8,8 @@
     <title>haawke</title>
     <script type="module" crossorigin src="./j/assets/main-2f8b6886.js"></script>
     <script type="module" crossorigin src="./j/assets/sq.js"></script>   
-  <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
+     <script type="module" crossorigin src="./j/assets/index.js"></script>  
+    <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
 
   </head>
   <body>
