--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -108,11 +108,11 @@ console.log('sound');
 
   <canvas class="app4" id="app1"></canvas>
  
-  <iframe id="ol"  title="logo-overlay" frameborder="0"  src="./ol.html"> </iframe> </div>
+  <iframe id="ol"  title="logo-overlay" frameborder="0"  src="./ol.html"> </iframe> 
 
-  <iframe id="iframe"  title="Musicbox" frameborder="0"  src="./dancer.html"> </iframe> </div>
+  <iframe id="iframe"  title="Musicbox" frameborder="0"  src="./dancer.html"> </iframe> 
 
- <video src='./assets/3DGridCity.webm' class="app4" autoplay mute id="app1"></canvas></div>
+ <video src='./assets/3DGridCity.webm' class="app4" autoplay mute id="video"></video></div>
     
 
   </body>
