--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ o<!DOCTYPE html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Same camera example - three-projected-material</title>
+    <title>haawke 'the music box'</title>
   
     <link rel="modulepreload" crossorigin href="./j/assets/math-utils-1c6b45c8.js">
   <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
   <style>
       html, body {
   overflow:hidden;
-        background-color: rgb(8, 8, 8);
+        background-color: rgb(5, 5, 8);
   }
 
   #iframe {
-    height:100vh;
-    width:100%;
+    height:150vh;
+    width:150%;
     margin:0px;
     position: absolute;
     z-index: 30;
@@ -26,8 +26,8 @@ backdrop-filter: hue-rotate(20deg);
 
   }
   #ol {
-    height:100vh;
-    width:100%;
+    height:80vh;
+    width:80%;
     margin:0px;
     position: absolute;
     z-index: 32;
