--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-o<!DOCTYPE html>
+oo<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -57,7 +57,7 @@ backdrop-filter: hue-rotate(20deg);
 
 
   }
-  #app1 {
+  #video{
     height:100vh;
     width:100%;
     margin:0px;
