--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   
     <link rel="modulepreload" crossorigin href="./j/assets/math-utils-1c6b45c8.js">
   <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
-	   <script type="module" crossorigin src="./j/assets/main-2f8b6886.js"></script>
- <script type="module" crossorigin src="./j/assets/index.js"></script>     
-	  <script type="module" crossorigin src="./j/assets/rot2.js"></script>  
+	   <script type="module" crossorigin src="./j/main-2f8b6886.js"></script>
+ <script type="module" crossorigin src="./j/index.js"></script>     
+	  <script type="module" crossorigin src="./j/rot2.js"></script>  
     <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
 
 
