--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
 	   <script type="module" crossorigin src="./j/main-2f8b6886.js"></script>
  <script type="module" crossorigin src="./j/index.js"></script>     
-	
+	 <script type="module" crossorigin src="./j/three.module.js"</script>     
     <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
 
 
