--- a/dancer.html
+++ b/dancer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Same camera example - three-projected-material</title>
     <script type="module" crossorigin src="./j/assets/main-2f8b6886.js"></script>
+     <script type="module" crossorigin src="./j/assets/index.js"></script>  
     <script type="module" crossorigin src="./j/assets/math-utils-1c6b45c8.js"></script>
       <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
 
