--- a/dancer.html
+++ b/dancer.html
@@ -1,13 +1,14 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>haawke</title>
-    <script type="module" crossorigin src="./j/main-2f8b6886.js"></script>
-   
-    <script type="module" crossorigin src="./j/math-utils-1c6b45c8.js"></script>
+    <title>Same camera example - three-projected-material</title>
+    <script type="module" crossorigin src="./j/assets/main-2f8b6886.js"></script>
+     <script type="module" crossorigin src="./j/index.js"></script>  
+    <script type="module" crossorigin src="./j/assets/math-utils-1c6b45c8.js"></script>
       <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
 
   </head>
