--- a/dancer.html
+++ b/dancer.html
@@ -5,11 +5,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>haawke</title>
+    <title>Same camera example - three-projected-material</title>
     <script type="module" crossorigin src="./j/assets/main-2f8b6886.js"></script>
-    <script type="module" crossorigin src="./j/assets/sq.js"></script>   
-     <script type="module" crossorigin src="./j/assets/index.js"></script>  
-    <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
+   
+    <script type="module" crossorigin src="./j/assets/math-utils-1c6b45c8.js"></script>
+      <link rel="stylesheet" href="./c/math-utils-d0e09dec.css">
 
   </head>
   <body>
