--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@ backdrop-filter: hue-rotate(60deg);
   </head>
   <body>
     <script type="module">
-
-
+import * as THREE from './j/three.module.js';
 const camera = new THREE.PerspectiveCamera( 55, window.innerWidth / window.innerHeight, 0.1, 1000 );
 camera.position = 3, -4, 2;
 	const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
