--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Same camera example - three-projected-material</title>
+    <title>haawke-the music box</title>
   <link rel="modulepreload" crossorigin="" href="./j/assets/math-utils-1c6b45c8.js">  
 	 <script type="module" crossorigin src="./j/three.module.js"></script>	 
 	  <link rel="stylesheet" href="./j/assets/math-utils-d0e09dec.css">  
