--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ backdrop-filter: hue-rotate(20deg);
 
   }
   #ol {
-    height:100vh;
+    height:100%;
     width:100%;
     margin:0px;
     position: absolute;
@@ -73,7 +73,7 @@ backdrop-filter: hue-rotate(60deg);
     <script type="module">
 import * as THREE from './j/three.module.js';
 const camera = new THREE.PerspectiveCamera( 55, window.innerWidth / window.innerHeight, 0.1, 1000 );
-camera.position = 3, -4, 2;
+camera.position.y = -4;
 	const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
 renderer.domElement.id = 'cnv2';
 		renderer.setClearColor( 0x00000 );
