--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ backdrop-filter: hue-rotate(60deg);
   </style>
   </head>
   <body>
+	  Click to start audio
     <script type="module">
 import * as THREE from './j/three.module.js';
 const camera = new THREE.PerspectiveCamera( 55, window.innerWidth / window.innerHeight, 0.1, 1000 );
