--- a/ol.html
+++ b/ol.html
@@ -16,18 +16,19 @@
       width:100%;
       height:100vh;
     }
-#overlay {
-  width:100%;
-  position: absolute;
-  margin:0;
-  height:100vh;
-  z-index:2;
-}
-
-  </style> 
-
-</head>
-<body>
+  #start_text {
+		  margin-right:5px;
+		  margin-left:80%;
+		  margin-top:5px;
+margin-bottom:90%;
+		  position:absolute:
+		  z-index:99;
+		  color:white;
+	  }
+  </style>
+  </head>
+  <body>
+	 <h3 id="start_text"> Click to start audio</h3>
   <img id="overlay" src="bg2_clear.png" />
 
 </body>
