--- a/ol.html
+++ b/ol.html
@@ -16,6 +16,15 @@
       width:100%;
       height:100vh;
     }
+	    #overlay  {
+		  margin-right: 70%;
+		  margin-left: 5px;
+		  margin-top: 5px;
+                   margin-bottom: 90%;
+		  position: absolute:
+		  z-index:99;
+		  color:white;
+	  }
   #start_text {
 		  margin-right:5px;
 		  margin-left:80%;
