--- a/ol.html
+++ b/ol.html
@@ -34,12 +34,16 @@ margin-bottom:90%;
 		  z-index:99;
 		  color:white;
 	  }
+	  #container
+	flex: auto;
+	  width:100%;
   </style>
   </head>
   <body>
+	  <div id="container">
 	 <h3 id="start_text"> Click to start audio</h3>
   <img id="overlay" src="bg2_clear.png" />
-
+	  </div>
 </body>
   
 </html>
