--- a/ol.html
+++ b/ol.html
@@ -42,9 +42,15 @@ margin-bottom:90%;
   </head>
   <body>
 	  <div id="container">
-	 <h3 id="start_text"> Click to start audio</h3>
+	<div> 
+		
+		
+			<h3 id="start_text"> Click to start audio</h3>
+	</div>
+		  <div>
   <img id="overlay" src="bg2_clear.png" />
 	  </div>
+		   </div>
 </body>
   
 </html>
