--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ backdrop-filter: hue-rotate(60deg);
 
 
   }
- #start_text {
+ #startButton{
 	  width: 120px;
 		  margin-right:5px;
 		  margin-left:80%;
