--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@ margin-bottom:90%;
 	  }
   </style>
   </head>
-  <body>
+  <body><div id="container">
 	
 	<div id="overlay">
 			<button id="startButton">Play</button>
 		</div>
-		<div id="container"></div>
-
+		
 
 
 
@@ -148,5 +147,7 @@ console.log('sound');
   <iframe id="ol"  title="logo" frameborder="0"  src="./ol.html"> </iframe> 
  </div>
 	  </div>
+	  </div>
+
   </body>
 </html>
