--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@ backdrop-filter: hue-rotate(60deg);
   }
  #startButton{
 	  width: 120px;
-		  margin-right:5px;
-		  margin-left:80%;
-		  margin-top:5px;
-margin-bottom:90%;
+		  margin-right:40%;
+		  margin-left:40%;
+		  margin-top:40%;
+margin-bottom:40%;
 		  position:absolute:
 		  z-index:99;
-		  color:white;
+		  color:black;
 	  }
 	  #container {
 	flex: auto;
