--- a/index.html
+++ b/index.html
@@ -80,7 +80,14 @@ margin-bottom:40%;
 		
 
 
-
+ <script type="importmap">
+            {
+              "imports": {
+             
+                "three/nodes": "https://unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js"
+             }
+            }
+          </script>
 
 
     <script type="module">
