--- a/index.html
+++ b/index.html
@@ -79,20 +79,19 @@ margin-bottom:40%;
 		</div>
 		
 
-<script type="importmap">
-			{
-				"imports": {
-					
-					"three/addons/": "https://unpkg.com/three@0.163.0/examples/jsm",
-					"three/nodes": "https://unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js"
-				}
-			}
-		</script>
-
+  <script type="importmap">
+            {
+              "imports": {
+                "three": "https://unpkg.com/three@0.163.0/build/three.module.js", 
+                "three/addons/": "https://unpkg.com/three@0.163.0/examples/jsm/",
+                "three/nodes": "https://unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js"
+             }
+            }
+          </scrip
 
 
     <script type="module">
-import * as THREE from './j/three.module.js';
+import * as THREE from 'three';
 
 	
 import { tslFn, uniform, storage, storageObject, instanceIndex, float, texture, viewportTopLeft, color } from 'three/nodes';
