--- a/index.html
+++ b/index.html
@@ -71,12 +71,7 @@ margin-bottom:40%;
 	  }
   </style>
   </head>
-  <body><div id="container">
-	
-	<div id="overlay">
-			<button id="startButton">Play</button>
-		</div>
-		
+  <body>
 
   <script type="importmap">
             {
@@ -340,7 +335,12 @@ document.body.append( renderer.domElement );
 
 			}
   </script>
-
+<div id="container">
+	
+	<div id="overlay">
+			<button id="startButton">Play</button>
+		</div>
+		
   <div class="app4">
     
 
