--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ margin-bottom:40%;
                 "three/nodes": "https://unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js"
              }
             }
-          </scrip
+  </script>
 
 
     <script type="module">
