--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@ margin-bottom:40%;
 import * as THREE from 'three';
 
 	
-import { tslFn, uniform, storage, storageObject, instanceIndex, float, texture, viewportTopLeft, color } from 'https://unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
+import { tslFn, uniform, storage, storageObject, instanceIndex, float, texture, viewportTopLeft, color } from '//unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
 
-			import { GUI } from 'https://unpkg.com/three@0.163.0/examples/jsm/libs/lil-gui.module.min.js';
+			import { GUI } from '//unpkg.com/three@0.163.0/examples/jsm/libs/lil-gui.module.min.js';
 
-			import WebGPURenderer from 'https://unpkg.com/three@0.163.0/examples/jsm/renderers/webgpu/WebGPURenderer.js';
-			import StorageInstancedBufferAttribute from 'https://unpkg.com/three@0.163.0/examples/jsm/renderers/common/StorageInstancedBufferAttribute.js';
+			import WebGPURenderer from '//unpkg.com/three@0.163.0/examples/jsm/renderers/webgpu/WebGPURenderer.js';
+			import StorageInstancedBufferAttribute from '//unpkg.com/three@0.163.0/examples/jsm/renderers/common/StorageInstancedBufferAttribute.js';
 
 			
 			let computeNode;
