--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>haawke-the music box</title>
 	  <script type="module" crossorigin src="./j/assets/main-2f8b6886.js"></script>
-    <script crossorigin src="./j/assets/math-utils-1c6b45c8.js">  </script>
+    <script type="module" crossorigin src="./j/assets/math-utils-1c6b45c8.js">  </script>
 
 	  <link rel="stylesheet" href="./j/assets/math-utils-d0e09dec.css">  
   <style>
