--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ margin-bottom:40%;
 
    
     <script type="module">
-import * as THREE from '/j/three.module.js';
+import * as THREE from './j/three.module.js';
 
 	
 import { tslFn, uniform, storage, storageObject, instanceIndex, float, texture, viewportTopLeft, color } from '//unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
