--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>haawke-the music box</title>
 	  <script type="module" crossorigin src="./j/assets/main-2f8b6886.js"></script>
     <script type="module" crossorigin src="./j/assets/math-utils-1c6b45c8.js">  </script>
- <script type="module" crossorigin src="https://unpkg.com/three@0.163.0/build/three.module.js"></script>
+ <script type="module" crossorigin src="//unpkg.com/three@0.163.0/build/three.module.js"></script>
 	  <link rel="stylesheet" href="./j/assets/math-utils-d0e09dec.css">  
   <style>
       html, body {
