--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ margin-bottom:40%;
     <script type="module">
 
 
-	
+	import * as THREE from "https://cdn.skypack.dev/three@0.150.0";
 import { tslFn, uniform, storage, storageObject, instanceIndex, float, texture, viewportTopLeft, color } from '//unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js';
 
 			import { GUI } from '//unpkg.com/three@0.163.0/examples/jsm/libs/lil-gui.module.min.js';
