--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ import { tslFn, uniform, storage, storageObject, instanceIndex, float, texture, 
 
 
 	        
-	    const startButton = document.getElementById( 'startButton' );
-			startButton.addEventListener( 'click', function () {
+	   // const startButton = document.getElementById( 'startButton' );
+			//startButton.addEventListener( 'click', function () {
 		
 				init();
 				animate();
