--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@ overflow:hidden;
 
 #overlay {
 	    height:100%;
-    width:100%;
+    width:100vh;
     margin:0px;
     position: absolute;
-    z-index: 122;
+    z-index: 922;
+	background-img:url('isabelle-cassuto-musicbox-render-closeup02-black.jpeg');
+	
 }
   #ol {
     height:100%;
