--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	     <script type="module" crossorigin src="./j/assets/main-2f8b6886.js"></script>
    
     
-      <link rel="modulepreload" crossorigin="" href="./j/assets/math-utils-1c6b45c8.js">  
+      <link rel="modulepreload" crossorigin="" href="./j/assets/math-utils-1c6b45c8.js"/>  
 	
 	  <link rel="stylesheet" href="./j/assets/math-utils-d0e09dec.css">  
   <style>
