--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ margin-bottom:40%;
             {
             "imports": {
                 "three": "https://cdnjs.cloudflare.com/ajax/libs/three.js/0.164.1/three.module.js",
-                "OrbitControls": "https://unpkg.com/three@0.138.0/examples/jsm/controls/OrbitControls.js"
+                "OrbitControls": "https://unpkg.com/three@0.138.0/examples/jsm/controls/OrbitControls.js",
 	      "three/nodes": "https://unpkg.com/three@0.163.0/examples/jsm/nodes/Nodes.js"
            }
             }
