--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ import { tslFn, uniform, storage, storageObject, instanceIndex, float, texture, 
 			startButton.addEventListener( 'click', function () {
 
 			startButton.addEventListener( 'click', init );
-				init();
-				animate();
+			
+				//animate();
 
 
 			} );
