--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 	  <link rel="stylesheet" href="./j/assets/math-utils-d0e09dec.css">  
   <style>
       html, body {
-  overflow:hidden;
+
         background-color: rgb(8, 8, 8);
   }
-
+ #overlay {
+    height:100%;
+    width:100%;
+    margin:0px;
+    position: absolute;
+    z-index: 132;
+  }
 
   #ol {
     height:100%;
