--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ import { tslFn, uniform, storage, storageObject, instanceIndex, float, texture, 
 				renderer.render( scene, camera );
 
 			}
-		video = document.getElementById( 'video' );
+		 let video = document.getElementById( 'video' );
 				video.play();
 				video.addEventListener( 'play', function () {
 
